[tool.poetry]
name = "voice-memo"
version = "0.1.0"
description = ""
authors = ["kazuaki-ito"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
line-bot-sdk = "^3.14.1"
openai = "0.28"
requests = "^2.32.3"
pydub = "^0.25.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
